--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,60 @@
 {
     "Lua.diagnostics.globals": [
-        "AngleurNicheOptions_ReloadWarning"
+        "AngleurNicheOptions_ReloadWarning",
+        "AngleurConfig",
+        "GAME_LOCALE",
+        "Angleur_CheckVersion",
+        "STRING_SCHOOL_PHYSICAL",
+        "STRING_SCHOOL_HOLY",
+        "STRING_SCHOOL_FIRE",
+        "STRING_SCHOOL_NATURE",
+        "STRING_SCHOOL_FROST",
+        "STRING_SCHOOL_SHADOW",
+        "STRING_SCHOOL_ARCANE",
+        "WEEKDAY_SUNDAY",
+        "WEEKDAY_MONDAY",
+        "WEEKDAY_TUESDAY",
+        "WEEKDAY_WEDNESDAY",
+        "WEEKDAY_THURSDAY",
+        "WEEKDAY_FRIDAY",
+        "WEEKDAY_SATURDAY",
+        "FULLDATE_MONTH_JANUARY",
+        "FULLDATE_MONTH_FEBRUARY",
+        "FULLDATE_MONTH_MARCH",
+        "FULLDATE_MONTH_APRIL",
+        "FULLDATE_MONTH_MAY",
+        "FULLDATE_MONTH_JUNE",
+        "FULLDATE_MONTH_JULY",
+        "FULLDATE_MONTH_AUGUST",
+        "FULLDATE_MONTH_SEPTEMBER",
+        "FULLDATE_MONTH_OCTOBER",
+        "FULLDATE_MONTH_NOVEMBER",
+        "FULLDATE_MONTH_DECEMBER",
+        "LE_LFG_CATEGORY_LFD",
+        "LOOKING_FOR_DUNGEON",
+        "LE_LFG_CATEGORY_RF",
+        "RAID_FINDER",
+        "LE_LFG_CATEGORY_SCENARIO",
+        "SCENARIOS",
+        "LE_LFG_CATEGORY_LFR",
+        "LOOKING_FOR_RAID",
+        "LE_LFG_CATEGORY_FLEXRAID",
+        "FLEX_RAID",
+        "LE_LFG_CATEGORY_WORLDPVP",
+        "WORLD_PVP",
+        "LE_LFG_CATEGORY_BATTLEFIELD",
+        "LFG_CATEGORY_BATTLEFIELD",
+        "RATED_SOLO_SHUFFLE_SIZE",
+        "RATED_BG_BLITZ_SIZE",
+        "ARENA_2V2",
+        "ARENA_3V3",
+        "BATTLEGROUND_10V10",
+        "ARENA",
+        "BATTLEGROUNDS",
+        "CONQUEST_BRACKET_NAME_2V2",
+        "CONQUEST_BRACKET_NAME_3V3",
+        "CONQUEST_BRACKET_NAME_RBG",
+        "CONQUEST_BRACKET_NAME_SOLO_SHUFFLE",
+        "CONQUEST_BRACKET_NAME_BATTLEGROUND_BLITZ"
     ]
 }
