Adding Spear Juggle 2 (Ready for Beta)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,9 @@
         "CONQUEST_BRACKET_NAME_3V3",
         "CONQUEST_BRACKET_NAME_RBG",
         "CONQUEST_BRACKET_NAME_SOLO_SHUFFLE",
-        "CONQUEST_BRACKET_NAME_BATTLEGROUND_BLITZ"
+        "CONQUEST_BRACKET_NAME_BATTLEGROUND_BLITZ",
+        "Angleur_PoolDelayer",
+        "angleurDelayers",
+        "Angleur_BetaPrint"
     ]
 }
